# Ramp-score

./: README.md  pyproject.toml  ramp_score.py  workflow.yml
ramp-score/: example.py  ramp_score.py  swinging_door.py
