[tool.poetry]
name = "ramp-score"
version = "0.1.0"
description = "A Python package to calculate Ramp scores and apply swinging door compression to series."
authors = ["niels.hendrikx <niels.y.hendrikx@gmail.coml>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
